--- a/Project.toml
+++ b/Project.toml
@@ -3,12 +3,14 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 ECOS = "e2685f51-7e38-5353-a97d-a921fd2c8199"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MeshCat = "283c5d60-a78f-5afe-a0af-af636b173e11"
+MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
